--- a/EDF_Source_FreeRTOSv10.3.1/Demo/ARM7_LPC2129_Keil_RVDS/bin/RTOSDemo.build_log.htm
+++ b/EDF_Source_FreeRTOSv10.3.1/Demo/ARM7_LPC2129_Keil_RVDS/bin/RTOSDemo.build_log.htm
@@ -21,36 +21,36 @@ Target DLL:      UL2ARM.DLL V1.74.10.0
 Dialog DLL:      TARMP.DLL V1.53.0.0
  
 <h2>Project:</h2>
-C:\FWD_Adv_EDF_Proj2\FreeRTOSv10.3.1\Demo\ARM7_LPC2129_Keil_RVDS\RTOSDemo.uvproj
-Project File Date:  04/04/2023
+C:\EDFScheduler_FreeRTOS_Implementation\EDF_Source_FreeRTOSv10.3.1\Demo\ARM7_LPC2129_Keil_RVDS\RTOSDemo.uvproj
+Project File Date:  04/05/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'RTOSDemo_THUMB'
-compiling port.c...
-assembling Startup.s...
 assembling serialISR.s...
+compiling list.c...
+compiling main.c...
+assembling Startup.s...
 compiling GPIO.c...
 Starter_Files_V1\source\GPIO.c(49): warning:  #127-D: expected a statement
   		}
 Starter_Files_V1\source\GPIO.c: 1 warning, 0 errors
 compiling GPIO_cfg.c...
-compiling list.c...
 compiling ParTest.c...
-compiling main.c...
+compiling port.c...
 compiling serial.c...
 Starter_Files_V1\source\serial.c(185): warning:  #550-D: variable "cChar"  was set but never used
   signed char cChar;
 Starter_Files_V1\source\serial.c: 1 warning, 0 errors
 compiling queue.c...
 assembling portASM.s...
-compiling tasks.c...
 compiling heap_2.c...
+compiling tasks.c...
 linking...
 Program Size: Code=7328 RO-data=32 RW-data=184 ZI-data=15376  
 FromELF: creating hex file...
 ".\bin\RTOSDemo.axf" - 0 Error(s), 2 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
