--- a/EDF_Source_FreeRTOSv10.3.1/Demo/ARM7_LPC2129_Keil_RVDS/bin/RTOSDemo.build_log.htm
+++ b/EDF_Source_FreeRTOSv10.3.1/Demo/ARM7_LPC2129_Keil_RVDS/bin/RTOSDemo.build_log.htm
@@ -27,29 +27,26 @@ Project File Date:  04/05/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'RTOSDemo_THUMB'
-assembling serialISR.s...
-compiling list.c...
-compiling main.c...
-assembling Startup.s...
-compiling GPIO.c...
-Starter_Files_V1\source\GPIO.c(49): warning:  #127-D: expected a statement
-  		}
-Starter_Files_V1\source\GPIO.c: 1 warning, 0 errors
 compiling GPIO_cfg.c...
-compiling ParTest.c...
+assembling Startup.s...
+assembling serialISR.s...
 compiling port.c...
+compiling ParTest.c...
+compiling GPIO.c...
+compiling list.c...
 compiling serial.c...
-Starter_Files_V1\source\serial.c(185): warning:  #550-D: variable "cChar"  was set but never used
-  signed char cChar;
-Starter_Files_V1\source\serial.c: 1 warning, 0 errors
+compiling main.c...
+Starter_Files_V1\source\main.c(374): warning:  #223-D: function "xTaskPeriodicCreate" declared implicitly
+  xTaskPeriodicCreate(T1_Button1	,/* Function that implements the task. */
+Starter_Files_V1\source\main.c: 1 warning, 0 errors
 compiling queue.c...
+compiling tasks.c...
 assembling portASM.s...
 compiling heap_2.c...
-compiling tasks.c...
 linking...
-Program Size: Code=7328 RO-data=32 RW-data=184 ZI-data=15376  
+Program Size: Code=11248 RO-data=32 RW-data=300 ZI-data=15380  
 FromELF: creating hex file...
-".\bin\RTOSDemo.axf" - 0 Error(s), 2 Warning(s).
+".\bin\RTOSDemo.axf" - 0 Error(s), 1 Warning(s).
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
