--- a/EDF_Source_FreeRTOSv10.3.1/Demo/ARM7_LPC2129_Keil_RVDS/bin/RTOSDemo.build_log.htm
+++ b/EDF_Source_FreeRTOSv10.3.1/Demo/ARM7_LPC2129_Keil_RVDS/bin/RTOSDemo.build_log.htm
@@ -28,25 +28,37 @@ Project File Date:  04/05/2023
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'RTOSDemo_THUMB'
 compiling GPIO_cfg.c...
+compiling main.c...
+Starter_Files_V1\source\main.c(208): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
+  	vTaskSetApplicationTaskTag(NULL , (void *) 1); //(TaskHookFunction_t)
+Starter_Files_V1\source\main.c(257): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
+  	vTaskSetApplicationTaskTag(NULL , (void *) 2);
+Starter_Files_V1\source\main.c(316): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
+  	vTaskSetApplicationTaskTag(NULL , (void *) 3);
+Starter_Files_V1\source\main.c(339): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
+  	vTaskSetApplicationTaskTag(NULL , (void *) 4);
+Starter_Files_V1\source\main.c(402): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
+  		vTaskSetApplicationTaskTag(NULL , (void *) 5);
+Starter_Files_V1\source\main.c(418): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
+  		vTaskSetApplicationTaskTag(NULL , (void *) 6);
+Starter_Files_V1\source\main.c(455): warning:  #223-D: function "xTaskPeriodicCreate" declared implicitly
+  xTaskPeriodicCreate(T1_Button1	,/* Function that implements the task. */
+Starter_Files_V1\source\main.c: 7 warnings, 0 errors
 assembling Startup.s...
 assembling serialISR.s...
 compiling port.c...
-compiling ParTest.c...
 compiling GPIO.c...
-compiling list.c...
+compiling ParTest.c...
 compiling serial.c...
-compiling main.c...
-Starter_Files_V1\source\main.c(374): warning:  #223-D: function "xTaskPeriodicCreate" declared implicitly
-  xTaskPeriodicCreate(T1_Button1	,/* Function that implements the task. */
-Starter_Files_V1\source\main.c: 1 warning, 0 errors
+compiling list.c...
 compiling queue.c...
 compiling tasks.c...
 assembling portASM.s...
 compiling heap_2.c...
 linking...
-Program Size: Code=11248 RO-data=32 RW-data=300 ZI-data=15380  
+Program Size: Code=11420 RO-data=32 RW-data=276 ZI-data=15380  
 FromELF: creating hex file...
-".\bin\RTOSDemo.axf" - 0 Error(s), 1 Warning(s).
+".\bin\RTOSDemo.axf" - 0 Error(s), 7 Warning(s).
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
