--- a/EDF_Source_FreeRTOSv10.3.1/Demo/ARM7_LPC2129_Keil_RVDS/bin/RTOSDemo.build_log.htm
+++ b/EDF_Source_FreeRTOSv10.3.1/Demo/ARM7_LPC2129_Keil_RVDS/bin/RTOSDemo.build_log.htm
@@ -22,43 +22,45 @@ Dialog DLL:      TARMP.DLL V1.53.0.0
  
 <h2>Project:</h2>
 C:\EDFScheduler_FreeRTOS_Implementation\EDF_Source_FreeRTOSv10.3.1\Demo\ARM7_LPC2129_Keil_RVDS\RTOSDemo.uvproj
-Project File Date:  04/05/2023
+Project File Date:  04/07/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'RTOSDemo_THUMB'
-compiling GPIO_cfg.c...
-compiling main.c...
-Starter_Files_V1\source\main.c(208): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
-  	vTaskSetApplicationTaskTag(NULL , (void *) 1); //(TaskHookFunction_t)
-Starter_Files_V1\source\main.c(257): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
-  	vTaskSetApplicationTaskTag(NULL , (void *) 2);
-Starter_Files_V1\source\main.c(316): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
-  	vTaskSetApplicationTaskTag(NULL , (void *) 3);
-Starter_Files_V1\source\main.c(339): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
-  	vTaskSetApplicationTaskTag(NULL , (void *) 4);
-Starter_Files_V1\source\main.c(402): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
-  		vTaskSetApplicationTaskTag(NULL , (void *) 5);
-Starter_Files_V1\source\main.c(418): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
-  		vTaskSetApplicationTaskTag(NULL , (void *) 6);
-Starter_Files_V1\source\main.c(455): warning:  #223-D: function "xTaskPeriodicCreate" declared implicitly
-  xTaskPeriodicCreate(T1_Button1	,/* Function that implements the task. */
-Starter_Files_V1\source\main.c: 7 warnings, 0 errors
-assembling Startup.s...
+compiling GPIO.c...
 assembling serialISR.s...
 compiling port.c...
-compiling GPIO.c...
+assembling Startup.s...
+compiling GPIO_cfg.c...
+compiling list.c...
 compiling ParTest.c...
 compiling serial.c...
-compiling list.c...
+compiling main.c...
+Starter_Files_V1\source\main.c(100): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
+  	vTaskSetApplicationTaskTag(NULL , (void *) 1); //(TaskHookFunction_t)
+Starter_Files_V1\source\main.c(136): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
+  	vTaskSetApplicationTaskTag(NULL , (void *) 2);
+Starter_Files_V1\source\main.c(166): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
+  	vTaskSetApplicationTaskTag(NULL , (void *) 3);
+Starter_Files_V1\source\main.c(189): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
+  	vTaskSetApplicationTaskTag(NULL , (void *) 4);
+Starter_Files_V1\source\main.c(241): warning:  #191-D: type qualifier is meaningless on cast type
+  				vSerialPutString((const signed char * const)buffer_String,localCounter+1);
+Starter_Files_V1\source\main.c(253): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
+  		vTaskSetApplicationTaskTag(NULL , (void *) 5);
+Starter_Files_V1\source\main.c(273): warning:  #167-D: argument of type "void *" is incompatible with parameter of type "TaskHookFunction_t"
+  		vTaskSetApplicationTaskTag(NULL , (void *) 6);
+Starter_Files_V1\source\main.c(310): warning:  #223-D: function "xTaskPeriodicCreate" declared implicitly
+  xTaskPeriodicCreate(T1_Button1,/* Function that implements the task. */
+Starter_Files_V1\source\main.c: 8 warnings, 0 errors
 compiling queue.c...
 compiling tasks.c...
 assembling portASM.s...
 compiling heap_2.c...
 linking...
-Program Size: Code=11420 RO-data=32 RW-data=276 ZI-data=15380  
+Program Size: Code=13176 RO-data=32 RW-data=276 ZI-data=15380  
 FromELF: creating hex file...
-".\bin\RTOSDemo.axf" - 0 Error(s), 7 Warning(s).
+".\bin\RTOSDemo.axf" - 0 Error(s), 8 Warning(s).
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
